# spaghetti

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
_progress/: 00-design-log.md  wds-project-outline.yaml
docs/A-Product-Brief/: content-language.md  product-brief.md  visual-direction.md
docs/B-Trigger-Map/: 01-business-goals.md  02-persona-sam-the-side-project-seeker.md  03-persona-jordan-the-journeyman.md
progress/: saga.md
src/: build.ts  svelte-plugin.ts
src/client/: App.svelte  agent.ts  index.html  log.ts
src/client/audio/: engine.ts  index.ts  sounds.ts  store.svelte.ts
src/client/components/: ABIndicator.svelte  Banner.svelte  BlinkingLight.svelte  BootFlicker.svelte  ChatLog.svelte  ChatMessage.svelte  FontSelect.svelte  FullscreenToggle.svelte  Goodbye.svelte  Header.svelte  Input.svelte  ModelSelect.svelte  MuteButton.svelte  PhotosensitivityWarning.svelte  RestartButton.svelte  SideColumn.svelte  SignalRow.svelte  Sparkline.svelte  SpeedSlider.svelte  StatusItem.svelte  ThinkingIndicator.svelte  VolumeSlider.svelte
src/client/motion/: arcs.ts  easings.ts  flares.ts  index.ts  sparks.ts  spring.ts  thoughtArc.ts  typing.ts
src/client/stores/: abtest.svelte.ts  boot.svelte.ts  chat.svelte.ts  effects.svelte.ts  font.svelte.ts  loop.svelte.ts  ollama.svelte.ts  scene.svelte.ts  speed.svelte.ts  telemetry.svelte.ts  work.svelte.ts
src/server/: api.ts  chat-log.ts  config.ts  dev.ts  index.ts
src/spaghetti/: __main__.py  agent.py  app.py  ollama_client.py
tests/: motion.test.ts  test_ollama_client.py
